crates/k-rust/tests/snapshots/module_to_kore__emits_one_path_and_all_path_reachability_claims.snap
---
source: crates/k-rust/tests/module_to_kore.rs
description: "K definition:\n\nmodule MAIN [all-path]\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int\n  syntax Bool ::= Exp \"==\" Exp [function, symbol(eq)]\n  syntax GeneratedTopCell ::= \"<top>\" Exp \"</top>\" [symbol(top)]\n\n  claim <top> X:Exp </top> => <top> ?Y:Exp </top>\n    requires X:Exp == 0\n    ensures ?Y:Exp == X:Exp\n    [one-path, label(one-step)]\n\n  claim <top> X:Exp </top> => <top> X:Exp </top>\n    [all-path, label(all-step)]\n\n  claim <top> X:Exp </top> => <top> X:Exp </top>\n    [label(module-default)]\nendmodule\n"
---
// semantics
module MAIN
  import K []
  sort SortBool{} []
  sort SortExp{} []
  sort SortGeneratedTopCell{} []
  sort SortInt{} [hasDomainValues{}()]
  symbol Lbleq{}(SortExp{}, SortExp{}) : SortBool{}
  [
    function{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(4,19,4,54)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("eq")
  ]
  symbol Lbltop{}(SortExp{}) : SortGeneratedTopCell{}
  [
    constructor{}(),
    functional{}(),
    injective{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(5,31,5,65)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("top")
  ]
  axiom{R}
    \exists{R}(
      Val:SortExp{},
      \equals{SortExp{}, R}(Val:SortExp{}, inj{SortInt{}, SortExp{}}(From:SortInt{}))
    )
    [subsort{SortInt{}, SortExp{}}()]
  axiom{R}
    \exists{R}(
      Val:SortGeneratedTopCell{},
      \equals{SortGeneratedTopCell{}, R}(Val:SortGeneratedTopCell{}, Lbltop{}(K0:SortExp{}))
    )
    [functional{}()]
  axiom{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(Lbltop{}(X0:SortExp{}), Lbltop{}(Y0:SortExp{})),
      Lbltop{}(\and{SortExp{}}(X0:SortExp{}, Y0:SortExp{}))
    )
    [constructor{}()]
  axiom{}
    \or{SortExp{}}(
      \exists{SortExp{}}(Val:SortInt{}, inj{SortInt{}, SortExp{}}(Val:SortInt{})),
      \bottom{SortExp{}}()
    )
    [constructor{}()]
  axiom{}
    \or{SortGeneratedTopCell{}}(
      \exists{SortGeneratedTopCell{}}(X0:SortExp{}, Lbltop{}(X0:SortExp{})),
      \bottom{SortGeneratedTopCell{}}()
    )
    [constructor{}()]
  axiom{} \or{SortInt{}}(\top{SortInt{}}(), \bottom{SortInt{}}()) [constructor{}()]
  claim{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(
        \equals{SortBool{}, SortGeneratedTopCell{}}(
          Lbleq{}(
            Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}),
            inj{SortInt{}, SortExp{}}(\dv{SortInt{}}("0"))
          ),
          \dv{SortBool{}}("true")
        ),
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}))
      ),
      weakExistsFinally{SortGeneratedTopCell{}}(
        \exists{SortGeneratedTopCell{}}(
          Var'Ques'Y:SortExp{},
          \and{SortGeneratedTopCell{}}(
            Lbltop{}(Lbl'Hash'SemanticCastToExp{}(Var'Ques'Y:SortExp{})),
            \equals{SortBool{}, SortGeneratedTopCell{}}(
              Lbleq{}(
                Lbl'Hash'SemanticCastToExp{}(Var'Ques'Y:SortExp{}),
                Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{})
              ),
              \dv{SortBool{}}("true")
            )
          )
        )
      )
    )
    [
      label{}("one-step"),
      org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(7,3,10,32)"),
      org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
    ]
  claim{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(
        \top{SortGeneratedTopCell{}}(),
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}))
      ),
      weakAlwaysFinally{SortGeneratedTopCell{}}(
        \and{SortGeneratedTopCell{}}(
          Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{})),
          \top{SortGeneratedTopCell{}}()
        )
      )
    )
    [
      label{}("all-step"),
      org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(12,3,13,32)"),
      org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
    ]
  claim{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(
        \top{SortGeneratedTopCell{}}(),
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}))
      ),
      weakAlwaysFinally{SortGeneratedTopCell{}}(
        \and{SortGeneratedTopCell{}}(
          Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{})),
          \top{SortGeneratedTopCell{}}()
        )
      )
    )
    [
      label{}("module-default"),
      org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(15,3,16,28)"),
      org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
    ]
endmodule [
  org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(1,1,17,10)"),
  org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
]

// syntax
module MAIN
  import K []
  sort SortBool{} []
  sort SortExp{} []
  sort SortGeneratedTopCell{} []
  sort SortInt{} [hasDomainValues{}()]
  symbol Lbleq{}(SortExp{}, SortExp{}) : SortBool{}
  [
    format{}(),
    function{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(4,19,4,54)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("eq"),
    terminals{}("010")
  ]
  symbol Lbltop{}(SortExp{}) : SortGeneratedTopCell{}
  [
    constructor{}(),
    format{}(),
    functional{}(),
    injective{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(5,31,5,65)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("top"),
    terminals{}("101")
  ]
  axiom{R}
    \exists{R}(
      Val:SortExp{},
      \equals{SortExp{}, R}(Val:SortExp{}, inj{SortInt{}, SortExp{}}(From:SortInt{}))
    )
    [subsort{SortInt{}, SortExp{}}()]
endmodule []

// macros
