crates/k-rust/tests/snapshots/module_to_kore__emits_ordinary_rewrite_rules_and_claims.snap
---
source: crates/k-rust/tests/module_to_kore.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int\n  syntax Exp ::= Exp \"+\" Exp [symbol(_+_)]\n  syntax Bool ::= Exp \"==\" Exp [function, symbol(eq)]\n  syntax GeneratedTopCell ::= \"<top>\" Exp \"</top>\" [symbol(top)]\n\n  rule <top> X:Exp + 0 </top> => <top> X:Exp </top>\n    requires X:Exp == 0\n    ensures X:Exp == 1\n    [label(step), priority(42)]\n\n  claim <top> X:Exp </top> => <top> ?Y:Exp </top>\n    ensures ?Y:Exp == X:Exp\n    [label(reachable)]\n\n  claim <top> X:Exp </top>\n    requires X:Exp == 0\n    [label(invariant)]\nendmodule\n"
---
// semantics
module MAIN
  import K []
  sort SortBool{} []
  sort SortExp{} []
  sort SortGeneratedTopCell{} []
  sort SortInt{} [hasDomainValues{}()]
  symbol Lbl'UndsPlusUnds'{}(SortExp{}, SortExp{}) : SortExp{}
  [
    constructor{}(),
    functional{}(),
    injective{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(4,18,4,43)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("_+_")
  ]
  symbol Lbleq{}(SortExp{}, SortExp{}) : SortBool{}
  [
    function{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(5,19,5,54)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("eq")
  ]
  symbol Lbltop{}(SortExp{}) : SortGeneratedTopCell{}
  [
    constructor{}(),
    functional{}(),
    injective{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(6,31,6,65)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("top")
  ]
  axiom{R}
    \exists{R}(
      Val:SortExp{},
      \equals{SortExp{}, R}(Val:SortExp{}, inj{SortInt{}, SortExp{}}(From:SortInt{}))
    )
    [subsort{SortInt{}, SortExp{}}()]
  axiom{R}
    \exists{R}(
      Val:SortExp{},
      \equals{SortExp{}, R}(Val:SortExp{}, Lbl'UndsPlusUnds'{}(K0:SortExp{}, K1:SortExp{}))
    )
    [functional{}()]
  axiom{}
    \implies{SortExp{}}(
      \and{SortExp{}}(
        Lbl'UndsPlusUnds'{}(X0:SortExp{}, X1:SortExp{}),
        Lbl'UndsPlusUnds'{}(Y0:SortExp{}, Y1:SortExp{})
      ),
      Lbl'UndsPlusUnds'{}(
        \and{SortExp{}}(X0:SortExp{}, Y0:SortExp{}),
        \and{SortExp{}}(X1:SortExp{}, Y1:SortExp{})
      )
    )
    [constructor{}()]
  axiom{R}
    \exists{R}(
      Val:SortGeneratedTopCell{},
      \equals{SortGeneratedTopCell{}, R}(Val:SortGeneratedTopCell{}, Lbltop{}(K0:SortExp{}))
    )
    [functional{}()]
  axiom{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(Lbltop{}(X0:SortExp{}), Lbltop{}(Y0:SortExp{})),
      Lbltop{}(\and{SortExp{}}(X0:SortExp{}, Y0:SortExp{}))
    )
    [constructor{}()]
  axiom{}
    \or{SortExp{}}(
      \exists{SortExp{}}(
        X0:SortExp{},
        \exists{SortExp{}}(X1:SortExp{}, Lbl'UndsPlusUnds'{}(X0:SortExp{}, X1:SortExp{}))
      ),
      \exists{SortExp{}}(Val:SortInt{}, inj{SortInt{}, SortExp{}}(Val:SortInt{})),
      \bottom{SortExp{}}()
    )
    [constructor{}()]
  axiom{}
    \or{SortGeneratedTopCell{}}(
      \exists{SortGeneratedTopCell{}}(X0:SortExp{}, Lbltop{}(X0:SortExp{})),
      \bottom{SortGeneratedTopCell{}}()
    )
    [constructor{}()]
  axiom{} \or{SortInt{}}(\top{SortInt{}}(), \bottom{SortInt{}}()) [constructor{}()]
  axiom{}
    \rewrites{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(
        Lbltop{}(
          Lbl'UndsPlusUnds'{}(
            Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}),
            inj{SortInt{}, SortExp{}}(\dv{SortInt{}}("0"))
          )
        ),
        \equals{SortBool{}, SortGeneratedTopCell{}}(
          Lbleq{}(
            Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}),
            inj{SortInt{}, SortExp{}}(\dv{SortInt{}}("0"))
          ),
          \dv{SortBool{}}("true")
        )
      ),
      \and{SortGeneratedTopCell{}}(
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{})),
        \equals{SortBool{}, SortGeneratedTopCell{}}(
          Lbleq{}(
            Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}),
            inj{SortInt{}, SortExp{}}(\dv{SortInt{}}("1"))
          ),
          \dv{SortBool{}}("true")
        )
      )
    )
    [
      label{}("step"),
      org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(8,3,11,32)"),
      org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
      priority{}("42")
    ]
  claim{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(
        \top{SortGeneratedTopCell{}}(),
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}))
      ),
      \exists{SortGeneratedTopCell{}}(
        Var'Ques'Y:SortExp{},
        \and{SortGeneratedTopCell{}}(
          Lbltop{}(Lbl'Hash'SemanticCastToExp{}(Var'Ques'Y:SortExp{})),
          \equals{SortBool{}, SortGeneratedTopCell{}}(
            Lbleq{}(
              Lbl'Hash'SemanticCastToExp{}(Var'Ques'Y:SortExp{}),
              Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{})
            ),
            \dv{SortBool{}}("true")
          )
        )
      )
    )
    [
      label{}("reachable"),
      org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(13,3,15,23)"),
      org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
    ]
  claim{}
    \implies{SortGeneratedTopCell{}}(
      \and{SortGeneratedTopCell{}}(
        \equals{SortBool{}, SortGeneratedTopCell{}}(
          Lbleq{}(
            Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}),
            inj{SortInt{}, SortExp{}}(\dv{SortInt{}}("0"))
          ),
          \dv{SortBool{}}("true")
        ),
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{}))
      ),
      \and{SortGeneratedTopCell{}}(
        Lbltop{}(Lbl'Hash'SemanticCastToExp{}(VarX:SortExp{})),
        \top{SortGeneratedTopCell{}}()
      )
    )
    [
      label{}("invariant"),
      org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(17,3,19,23)"),
      org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
    ]
endmodule [
  org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(1,1,20,10)"),
  org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
]

// syntax
module MAIN
  import K []
  sort SortBool{} []
  sort SortExp{} []
  sort SortGeneratedTopCell{} []
  sort SortInt{} [hasDomainValues{}()]
  symbol Lbl'UndsPlusUnds'{}(SortExp{}, SortExp{}) : SortExp{}
  [
    constructor{}(),
    format{}(),
    functional{}(),
    injective{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(4,18,4,43)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("_+_"),
    terminals{}("010")
  ]
  symbol Lbleq{}(SortExp{}, SortExp{}) : SortBool{}
  [
    format{}(),
    function{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(5,19,5,54)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("eq"),
    terminals{}("010")
  ]
  symbol Lbltop{}(SortExp{}) : SortGeneratedTopCell{}
  [
    constructor{}(),
    format{}(),
    functional{}(),
    injective{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(6,31,6,65)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("top"),
    terminals{}("101")
  ]
  axiom{R}
    \exists{R}(
      Val:SortExp{},
      \equals{SortExp{}, R}(Val:SortExp{}, inj{SortInt{}, SortExp{}}(From:SortInt{}))
    )
    [subsort{SortInt{}, SortExp{}}()]
endmodule []

// macros
